src/objects/Instrument__c.object
<CustomObject>
    <fields>
        <fullName>Book_Number__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Type__c</fullName>
        <label>Book Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instrument_County__c</fullName>
        <label>Instrument County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instrument_Date__c</fullName>
        <label>Instrument Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instrument_Notes__c</fullName>
        <label>Instrument Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Instrument_Number__c</fullName>
        <label>Instrument Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instrument_State__c</fullName>
        <inlineHelpText>enter state abbreviation</inlineHelpText>
        <label>Instrument State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Name__c</fullName>
        <label>Lease Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Royalty__c</fullName>
        <label>Lease Royalty</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Status__c</fullName>
        <label>Lease Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HBP</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lessee__c</fullName>
        <externalId>true</externalId>
        <label>Lessee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lessor__c</fullName>
        <externalId>true</externalId>
        <label>Lessor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Number__c</fullName>
        <label>Page Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Royalty_Type__c</fullName>
        <label>Royalty Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assumed</fullName>
                    <default>true</default>
                    <label>Assumed</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>expirationDate__c</fullName>
        <formula>IF( !ISBLANK(Effective_Date__c), 
  IF( extended__c , 
    /*All necessary fields are populated*/
    IF(!ISBLANK( extensionTerm__c ) &amp;&amp; !ISBLANK(TEXT( extensionTermMeasure__c ))&amp;&amp;!ISBLANK( term__c )&amp;&amp;!ISBLANK(TEXT( termMeasure__c )), 
      IF( TEXT(termMeasure__c) == &quot;Year&quot; &amp;&amp;  TEXT(extensionTermMeasure__c) ==&quot;Year&quot;, 
        ADDMONTHS(ADDMONTHS( Effective_Date__c , term__c * 12), extensionTerm__c * 12)  , 
        IF(TEXT(termMeasure__c) == &quot;Year&quot; &amp;&amp;  TEXT(extensionTermMeasure__c) ==&quot;Month&quot;, 
          ADDMONTHS(ADDMONTHS( Effective_Date__c , term__c * 12), extensionTerm__c), 
          IF(TEXT(termMeasure__c) == &quot;Month&quot; &amp;&amp;  TEXT(extensionTermMeasure__c) ==&quot;Month&quot;, 
            ADDMONTHS(ADDMONTHS( Effective_Date__c , term__c ), extensionTerm__c), 
            IF(TEXT(termMeasure__c) == &quot;Month&quot; &amp;&amp;  TEXT(extensionTermMeasure__c) ==&quot;Year&quot;, 
              ADDMONTHS(ADDMONTHS( Effective_Date__c , term__c ), extensionTerm__c * 12), 
               null ) ) ) ) , 
    /*if extended, validation rule requires extension fields to be populated, but need to check initial term and option*/
     IF(ISBLANK(term__c ) || ISBLANK(TEXT(termMeasure__c )), 
        IF(TEXT(extensionTermMeasure__c) ==&quot;Year&quot;, 
          ADDMONTHS( Effective_Date__c , extensionTerm__c * 12), 
          IF(TEXT(extensionTermMeasure__c) ==&quot;Month&quot;, 
            ADDMONTHS( Effective_Date__c , extensionTerm__c), 
            null) ) , 
        null ) ) ,
  /*Not extended */
  IF(!ISBLANK( term__c )&amp;&amp;!ISBLANK(TEXT( termMeasure__c )),
     IF(TEXT(termMeasure__c) == &quot;Year&quot;, 
       ADDMONTHS( Effective_Date__c , term__c * 12), 
        IF(TEXT(termMeasure__c) == &quot;Month&quot;, 
          ADDMONTHS( Effective_Date__c , term__c), 
          null) ) , 
    /*No valid options, use Effective Date*/
    null) ) , 
  null)</formula>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>extended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the extension option should be included when calculating the expiration date</description>
        <label>Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>extensionTermMeasure__c</fullName>
        <label>Extension Term Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Year</fullName>
                    <default>true</default>
                    <label>Year</label>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>extensionTerm__c</fullName>
        <label>Extension Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>termMeasure__c</fullName>
        <description>Term length measure (Year or Month)</description>
        <label>Term Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Year</fullName>
                    <default>true</default>
                    <label>Year</label>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Instrument</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lessor__c</columns>
        <columns>Lessee__c</columns>
        <columns>Book_Type__c</columns>
        <columns>Book_Number__c</columns>
        <columns>Page_Number__c</columns>
        <columns>Lease_Royalty__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Jordan</fullName>
        <columns>NAME</columns>
        <columns>Lessor__c</columns>
        <columns>Lessee__c</columns>
        <columns>Book_Type__c</columns>
        <columns>Book_Number__c</columns>
        <columns>Page_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Book_Number__c</field>
            <operation>equals</operation>
            <value>1020</value>
        </filters>
        <label>All - Jordan</label>
    </listViews>
    <nameField>
        <displayFormat>IN-{0000000000}</displayFormat>
        <label>Instrument Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Instruments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Extension_Term_and_Term_Measure</fullName>
        <active>true</active>
        <description>If either is populated, the other field must be.</description>
        <errorConditionFormula>(!ISBLANK( extensionTerm__c )&amp;&amp; ISBLANK(TEXT( extensionTermMeasure__c )))||
(ISBLANK(extensionTerm__c )&amp;&amp; !ISBLANK(TEXT(extensionTermMeasure__c )))</errorConditionFormula>
        <errorMessage>For a valid Extension Term you must enter both Extension Term and Extension Term Measure.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Extension_Values_when_Extended</fullName>
        <active>true</active>
        <description>Require extension option and extension measure are populated when setting extended to true.</description>
        <errorConditionFormula>extended__c &amp;&amp; (ISBLANK( extensionTerm__c ) || ISBLANK(TEXT( extensionTermMeasure__c )))</errorConditionFormula>
        <errorMessage>You must enter an Extension Option and Extension Option Term Measure value when setting Extended to true.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Term_and_Term_Measure</fullName>
        <active>true</active>
        <description>If either is populated, the other field must be.</description>
        <errorConditionFormula>(!ISBLANK(term__c  )&amp;&amp; ISBLANK(TEXT(termMeasure__c )))||
(ISBLANK(term__c  )&amp;&amp; !ISBLANK(TEXT(termMeasure__c )))</errorConditionFormula>
        <errorMessage>For a valid Term you must enter both Term and Term Measure.</errorMessage>
    </validationRules>
</CustomObject>